# shells_bells.lv2

./: .gitlab-ci.yml  ChangeLog  README.md  manifest.ttl.in  meson.build  meson_options.txt  props.h  shells_bells.c  shells_bells.h  shells_bells.ttl.in  shells_bells_ui.c  shells_bells_ui.ttl
d2tk/: base.h  config.h.in  core.h
example/: d2tk_fbdev.c  example.c
src/: backend_cairo.c  backend_nanovg.c  base.c  base_button.c  core.c  core_internal.h  frontend_fbdev.c  frontend_pugl.c
subprojects/d2tk/: meson.build
subprojects/d2tk/d2tk/: base.h  config.h.in  core.h  frontend_pugl.h
subprojects/d2tk/example/: example.c
subprojects/d2tk/src/: backend_cairo.c  backend_nanovg.c  base.c  base_bar.c  base_internal.h  base_pty.c  base_spinner.c  frontend_fbdev.c  frontend_pugl.c
subprojects/d2tk/test/: core.c
test/: base.c
